--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "rentify",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "src/index.js",
     "scripts": {
         "build": "npx tsc",
