--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "scripts": {
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "prisma": "npx prisma",
+        "prisma:generate": "npx prisma generate",
+        "prisma:migrate": "npx prisma migrate dev"
+
     },
     "keywords": [],
     "author": "",
